--- a/houses.html
+++ b/houses.html
@@ -53,7 +53,9 @@
 <!-- photocard links -->
 <div class="centering">
 
-<a href="enquiry.html" class="showcase_card_products">
+<form name="form1" action="enquiry.html" method="get">
+
+<button type="submit" id="property_name" name="n" value="Small Downtown Home" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/smalldowntownhome.jpg" alt="Small Downtown Home" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/0f3cf0c3-b223-4484-a949-38cfcbee0040.c10.jpg-->
@@ -70,9 +72,9 @@
 		<li>Extras: Pets welcome. Free-Parking</li>
 	</ul>
 </div>
-</a>
+</button>
 
-<a href="enquiry.html" class="showcase_card_products">
+<button type="submit" id="property_name" name="n" value="Blue Ridge Farmhouse" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/BlueRidgeFarmhouse.jpg" alt="Blue Ridge Farmhouse" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/9e2727e2-0aad-4eb0-a273-6a82f8ed7d7d.c10.jpg-->
@@ -89,9 +91,9 @@
 		<li>Extras: Free-Parking, Barbeque Grill Pit.</li>
 	</ul>
 </div>
-</a>
+</button>
 
-<a href="enquiry.html" class="showcase_card_products">
+<button type="submit" id="property_name" name="n" value="Forest Retreat Cottage" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/Forestretreatcottage.jpg" alt="Forest Retreat Cottage" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/79296671-1554-44c6-b0b3-11c2f2a4d797.c10.jpg-->
@@ -108,9 +110,9 @@
 		<li>Extras: Free-Parking, Barbeque Grill Pit.</li>
 	</ul>
 </div>
-</a>
+</button>
 
-<a href="enquiry.html" class="showcase_card_products">
+<button type="submit" id="property_name" name="n" value="Southern Belle Townhouse" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/townhouse.jpg" alt="Southern Belle Townhouse" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/f764043c-c879-4ac2-991c-39baf3cb22de.c10.jpg-->
@@ -127,9 +129,9 @@
 		<li>Extras: Free-Parking, Swimming pool, Pet Friendly.</li>
 	</ul>
 </div>
-</a>
+</button>
 
-<a href="enquiry.html" class="showcase_card_products">
+<button type="submit" id="property_name" name="n" value="Regal Palmhouse" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/palmhouse.jpg" alt="Regal Palmhouse" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/0d771ae4-b14b-42a5-a441-b979c5ae9bcf.c10.jpg-->
@@ -146,9 +148,9 @@
 		<li>Extras: Pet Friendly, Barbeque Grill Pit. </li>
 	</ul>
 </div>
-</a>
+</button>
 
-<a href="enquiry.html" class="showcase_card_products">
+<button type="submit" id="property_name" name="n" value="Historic Renaissance House" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/historichouse.jpg" alt="Historic Renaissance House" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/822b96e6-d429-47b1-8d67-958ad2f0eb52.c10.jpg-->
@@ -165,9 +167,9 @@
 		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
 	</ul>
 </div>
-</a>
+</button>
 
-<a href="enquiry.html" class="showcase_card_products">
+<button type="submit" id="property_name" name="n" value="The Victorian Magic" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/victorianhouse.jpg" alt="The Victorian Magic" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/c8ed2a2f-1422-4150-8c12-73c64094b33f.c10.jpg-->
@@ -184,9 +186,9 @@
 		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
 	</ul>
 </div>
-</a>
+</button>
 
-<a href="enquiry.html" class="showcase_card_products">
+<button type="submit" id="property_name" name="n" value="The Tuscany Classic" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/tuscanyhouse.jpg" alt="The Tuscany Classic" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/6273d99f-6831-4c87-8de3-ff82623a7b71.c10.jpg-->
@@ -203,9 +205,9 @@
 		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
 	</ul>
 </div>
-</a>
+</button>
 
-<a href="enquiry.html" class="showcase_card_products">
+<button type="submit" id="property_name" name="n" value="The Spanish Palazzo" class="showcase_card_products">
 <div class="photo_container">
 <img src="images/houses/spanishpalazzo.jpg" alt="The Spanish Palazzo" class="products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/af43ecaa-1153-4280-9f4a-1442b3b5a193.c10.jpg-->
@@ -222,7 +224,9 @@
 		<li>Extras: Barbeque Grill Pit, Free Parking, Garden, Pool, Sauna.</li>
 	</ul>
 </div>
-</a>
+</button>
+
+</form>
 
 </div>
 
